<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollViewUserIntel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewMainUserIntel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleUserIntel"
                app:layout_constraintTop_toTopOf="@+id/viewMainUserIntel"
                app:layout_constraintLeft_toLeftOf="@+id/viewMainUserIntel"
                app:layout_constraintRight_toRightOf="@+id/viewMainUserIntel"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/viewFLNameProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPersonFirstName"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPersonName"
                    android:text="@string/first_name_input"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="2.0" />

                <EditText
                    android:id="@+id/editTextTextPersonLastName"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPersonName"
                    android:text="@string/last_name_input"
                    app:layout_constrainedWidth="@+id/editTextTextPersonFirstName"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="2.0"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonFirstName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonFirstName"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="40dp"
                    android:src="@drawable/userprofile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginTop="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewFLNameProfile">

                <TextView
                    android:id="@+id/radioButtonTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioGenderSelectorTitle"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <RadioGroup
                    android:layout_marginTop="20dp"
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/radioButtonTitle"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioGenderSelectorMale"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                        app:layout_constraintHorizontal_bias="1.0"/>

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioGenderSelectorFemale"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                        app:layout_constraintHorizontal_bias="1.0"/>

                    <RadioButton
                        android:id="@+id/radioButtonOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioGenderSelectorOther"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintEnd_toEndOf="@+id/radioGroup"

                        />
                </RadioGroup>

                <EditText

                    android:id="@+id/editDate"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:inputType="date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    app:layout_constraintVertical_bias="0.066" />

                <Button
                    android:id="@+id/btnValidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="Validate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>